--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,7 @@
     "expo-asset": "~12.0.12",
     "expo-battery": "~10.0.8",
     "expo-blur": "~15.0.8",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
