--- a/src/app.json
+++ b/src/app.json
@@ -43,7 +43,8 @@
         "android.permission.BLUETOOTH_CONNECT",
         "android.permission.BLUETOOTH_ADVERTISE",
         "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.ACCESS_COARSE_LOCATION"
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.RECORD_AUDIO"
       ]
     },
     "web": {
@@ -57,7 +58,9 @@
         "react-native-ble-plx",
         {
           "isBackgroundEnabled": true,
-          "modes": ["central"],
+          "modes": [
+            "central"
+          ],
           "bluetoothAlwaysPermission": "FLARE needs Bluetooth to detect emergency SOS beacons"
         }
       ],
@@ -66,8 +69,9 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "7402ae1e-d9ac-47e7-9280-c3a3488c8711"
+        "projectId": "01577445-101f-4b25-8483-13bc7bea4e37"
       }
-    }
+    },
+    "owner": "s_abd_24"
   }
 }
